<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/dlg_background"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:padding="15dip">
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:isScrollContainer="true"
	    android:scrollbars="vertical">
	    <LinearLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical">

			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top"
			    android:layout_marginRight="10dp"
			    android:contentDescription="@string/about_image"
			    android:src="@drawable/ic_action_about" />

	       <LinearLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"/>
	    </LinearLayout>
	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical">
	    	<TextView
	      		android:text="@string/about_title"
	      		android:textStyle="bold"
	      		android:layout_height="wrap_content" 
	      		android:layout_width="fill_parent" 
	      		android:textColor="@color/dlg_title" 
	      		android:height="30dip" 
	      		android:paddingLeft="2dip" 
	      		android:gravity="left|center" 
	      		android:background="@color/dlg_title_background"/>
	      	<TextView
	      		android:id="@string/app_version"
	      		android:textColor="@color/dlg_text"
	      		android:textSize="11.5sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content" />
	   		<TextView
	      		android:text="@string/about_text"
	      		android:textColor="@color/dlg_text"
	      		android:textSize="12.5sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content" 
	      		android:layout_marginTop="2dp"/>
	      	<TextView
	      		android:text="@string/about_code_copyright"
	      		android:textColor="@color/dlg_text"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />
	      	<TextView
	      		android:text="@string/about_license"
	      		android:textColor="@color/dlg_text"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />
	      	<TextView
	      		android:text="@string/about_url"
	      		android:textColor="@color/dlg_text"
	      		android:textColorHighlight="@color/dlg_url"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp"
	      		android:clickable="true" 
	      		android:autoLink="all"/>
	    </LinearLayout>
	</LinearLayout>
</ScrollView>