<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/browsecast_background" >

<ImageView
    android:id="@+id/imgview_podcast"
    android:layout_width="180dp"
    android:layout_height="180dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:clickable="true"
    android:contentDescription="@string/podcast_imageview"
    android:padding="2dp"
    android:src="@android:drawable/ic_menu_gallery" />

<TextView
    android:id="@+id/tv_podcastFlavour"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/imgview_podcast"
    android:padding="10dip"
    android:text="@string/podcast_flavour"
    android:textColor="#ffffff"
    android:textSize="16sp" >

</TextView>

<TextView
    android:id="@+id/tv_podcastDuration"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tv_podcastFlavour"
    android:padding="10dip"
    android:text="@string/podcast_duration"
    android:textColor="#ffffff"
    android:textSize="16sp" >

</TextView>

<ScrollView
    android:id="@+id/widget_sv"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@+id/tv_podcastDuration" >

<TextView
    android:id="@+id/tv_podcastDescription"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:text="@string/podcast_description"
    android:textColor="#ffffff"
    android:textSize="16sp" >
</TextView>
</ScrollView>
</RelativeLayout>